--- a/add client.html
+++ b/add client.html
@@ -38,7 +38,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <!-- <div class="container">
       <section>
         <h1 class="d-form-head my-5">Add Client</h1>
         <form id="add-client-form">
@@ -105,7 +105,77 @@
           </table>
         </form>
       </section>
-    </div>
+    </div> -->
+
+    <form id="add-client-form">
+      <div class="container">
+        <!-- Header for Add Client Form -->
+        <h1 class="d-form-head my-5">Add Client</h1>
+        <div class="row">
+          <!-- Column 1: Date Input -->
+          <div class="col-3">
+            <div class="col-12 my-2">
+              <label for="add-client-date" class="form-label">Date :</label>
+              <input
+                type="date"
+                id="add-client-date"
+                class="form-inps py-1 w-100"
+              />
+            </div>
+          </div>
+
+          <!-- Column 2: Client Name Select -->
+          <div class="col-3">
+            <div class="col-12 my-2">
+              <label for="add-client-client-name" class="form-label"
+                >Client Name :</label
+              >
+              <select id="add-client-client-name" class="form-inps py-1 w-100">
+                <option value="client 1">Client 1</option>
+                <option value="client 2">Client 2</option>
+                <option value="client 3">Client 3</option>
+                <option value="client 4">Client 4</option>
+                <option value="client 5">Client 5</option>
+              </select>
+            </div>
+          </div>
+
+          <!-- Column 3: Address Input -->
+          <div class="col-4">
+            <div class="col-12 my-2">
+              <label for="add-client-address" class="form-label"
+                >Address :</label
+              >
+              <input
+                type="text"
+                id="add-client-address"
+                class="py-1 form-inps w-100"
+                autocomplete="off"
+              />
+            </div>
+          </div>
+
+          <!-- Column 4: Cell Number Input -->
+          <div class="col-2">
+            <div class="col-12 my-2">
+              <label for="add-client-client-cell-num" class="form-label"
+                >Cell Number :</label
+              >
+              <input
+                type="number"
+                id="add-client-client-cell-num"
+                class="py-1 form-inps w-100"
+              />
+            </div>
+          </div>
+        </div>
+
+        <!-- Save Button -->
+        <div class="col-1 mt-5 mx-auto">
+          <button class="add-data-btn">Save</button>
+        </div>
+      </div>
+    </form>
   </body>
 
   <script type="module" src="app.js"></script>
