--- a/add employee.html
+++ b/add employee.html
@@ -38,7 +38,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <!-- <div class="container">
       <section>
         <h1 class="d-form-head my-5">Add Employee</h1>
         <form id="add-employee-form">
@@ -114,6 +114,94 @@
 
             <tbody class="added-data-ctnr mt-5"></tbody>
           </table>
+        </form>
+      </section>
+    </div> -->
+
+    <div class="container">
+      <section>
+        <h1 class="d-form-head my-5">Add Employee</h1>
+        <form id="add-employee-form">
+          <div class="row">
+            <!-- Column 1: Date Input -->
+            <div class="col-2">
+              <div class="col-12 my-2">
+                <label for="add-employee-date" class="form-label">Date :</label>
+                <input
+                  type="date"
+                  id="add-employee-date"
+                  class="py-1 form-inps w-100"
+                />
+              </div>
+            </div>
+
+            <!-- Column 2: Employee Name Select -->
+            <div class="col-3">
+              <div class="col-12 my-2">
+                <label for="add-employee-employee-name" class="form-label"
+                  >Employee Name :</label
+                >
+                <select
+                  id="add-employee-employee-name"
+                  class="form-inps py-1 w-100"
+                >
+                  <option value="employee 1">Employee 1</option>
+                  <option value="employee 2">Employee 2</option>
+                  <option value="employee 3">Employee 3</option>
+                  <option value="employee 4">Employee 4</option>
+                  <option value="employee 5">Employee 5</option>
+                </select>
+              </div>
+            </div>
+
+            <!-- Column 3: Designation Input -->
+            <div class="col-2">
+              <div class="col-12 my-2">
+                <label for="add-employee-designation" class="form-label"
+                  >Designation :</label
+                >
+                <input
+                  type="text"
+                  id="add-employee-designation"
+                  class="py-1 form-inps w-100"
+                  autocomplete="off"
+                />
+              </div>
+            </div>
+
+            <!-- Column 4: Employee Cell Number Input -->
+            <div class="col-3">
+              <div class="col-12 my-2">
+                <label for="add-employee-cell-num" class="form-label"
+                  >Cell Number :</label
+                >
+                <input
+                  type="number"
+                  id="add-employee-cell-num"
+                  class="py-1 form-inps w-100"
+                />
+              </div>
+            </div>
+
+            <!-- Column 5: Employee Salary Input -->
+            <div class="col-2">
+              <div class="col-12 my-2">
+                <label for="add-employee-salary" class="form-label"
+                  >Salary :</label
+                >
+                <input
+                  type="number"
+                  id="add-employee-salary"
+                  class="py-1 form-inps w-100"
+                />
+              </div>
+            </div>
+
+            <!-- Save Button -->
+            <div class="col-1 mt-5 mx-auto">
+              <button class="add-data-btn">Save</button>
+            </div>
+          </div>
         </form>
       </section>
     </div>
