--- a/vendor's transaction.html
+++ b/vendor's transaction.html
@@ -38,7 +38,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <!-- <div class="container">
       <section>
         <h1 class="my-5 d-form-head">vendor's transaction</h1>
         <form id="vendor-transaction-form">
@@ -160,7 +160,149 @@
           </table>
         </form>
       </section>
-    </div>
+    </div> -->
+
+    <form id="vendor-transaction-form">
+      <div class="container">
+        <!-- Header for Vendor Transaction Form -->
+        <h1 class="my-5 d-form-head">Vendor's Transaction</h1>
+        <div class="row">
+          <!-- Column 1: Product Select -->
+          <div class="col-3">
+            <div class="col-12 my-2">
+              <label for="vendor-transaction-product" class="form-label"
+                >Product :</label
+              >
+              <select
+                id="vendor-transaction-product"
+                class="form-inps py-1 w-100"
+              >
+                <option value="product 1">Product 1</option>
+                <option value="product 2">Product 2</option>
+                <option value="product 3">Product 3</option>
+                <option value="product 4">Product 4</option>
+                <option value="product 5">Product 5</option>
+              </select>
+            </div>
+          </div>
+
+          <!-- Column 2: Bags Input -->
+          <div class="col-2">
+            <div class="col-12 my-2">
+              <label for="vendor-transaction-bags" class="form-label"
+                >Bags :</label
+              >
+              <input
+                type="number"
+                id="vendor-transaction-bags"
+                class="py-1 form-inps w-100"
+                autocomplete="off"
+              />
+            </div>
+          </div>
+
+          <!-- Column 3: Bags Weight Input -->
+          <div class="col-2">
+            <div class="col-12 my-2">
+              <label for="vendor-transaction-bags-weight" class="form-label"
+                >Bags Weight :</label
+              >
+              <input
+                type="number"
+                id="vendor-transaction-bags-weight"
+                class="py-1 form-inps w-100"
+                autocomplete="off"
+              />
+            </div>
+          </div>
+
+          <!-- Column 4: Price Input -->
+          <div class="col-2">
+            <div class="col-12 my-2">
+              <label for="vendor-transaction-price" class="form-label"
+                >Price :</label
+              >
+              <input
+                type="number"
+                id="vendor-transaction-price"
+                class="py-1 form-inps w-100"
+                autocomplete="off"
+              />
+            </div>
+          </div>
+
+          <!-- Column 5: Total Price Input -->
+          <div class="col-2">
+            <div class="col-12 my-2">
+              <label for="vendor-transaction-total-price" class="form-label"
+                >Total Price :</label
+              >
+              <input
+                type="number"
+                id="vendor-transaction-total-price"
+                class="py-1 form-inps w-100"
+                autocomplete="off"
+                readonly
+              />
+            </div>
+          </div>
+
+          <!-- Column 6: Amount Payable Input -->
+          <div class="col-2">
+            <div class="col-12 my-2">
+              <label for="vendor-transaction-amount-payable" class="form-label"
+                >Amount Payable :</label
+              >
+              <input
+                type="number"
+                id="vendor-transaction-amount-payable"
+                class="py-1 form-inps w-100"
+                autocomplete="off"
+                readonly
+              />
+            </div>
+          </div>
+
+          <!-- Column 7: Advance Payment Input -->
+          <div class="col-2">
+            <div class="col-12 my-2">
+              <label for="vendor-transaction-advance-payment" class="form-label"
+                >Advance Payment :</label
+              >
+              <input
+                type="number"
+                id="vendor-transaction-advance-payment"
+                class="py-1 form-inps w-100"
+                autocomplete="off"
+              />
+            </div>
+          </div>
+
+          <!-- Column 8: Outstanding Payable Input -->
+          <div class="col-3">
+            <div class="col-12 my-2">
+              <label
+                for="vendor-transaction-outstanding-payable"
+                class="form-label"
+                >Outstanding Payable :</label
+              >
+              <input
+                type="number"
+                id="vendor-transaction-outstanding-payable"
+                class="py-1 form-inps w-100"
+                autocomplete="off"
+                readonly
+              />
+            </div>
+          </div>
+        </div>
+
+        <!-- Save Button -->
+        <div class="col-1 mt-5 mx-auto">
+          <button class="add-data-btn">Save</button>
+        </div>
+      </div>
+    </form>
   </body>
 
   <script type="module" src="app.js"></script>
